Fixed banners having black bars on mobile

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -602,8 +602,9 @@ a#archive-Chapter-4 {
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center top;
-    height: 125px;
-    width: auto;
+    min-height: 100%;
+    overflow: hidden;
+    max-width: 100%;
     margin-bottom: 10px;
     background-color: black;
 }
